add finish pickup request
